--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,12 @@ a {
   font-size: var(--fs-custom, var(--fs-sm));
 }
 
+.no-animations *,
+.no-animations *::before,
+.no-animations *::after {
+  animation: none !important;
+  transition: none !important;
+}
 /* ===========
       Navbar
    =========== */
@@ -195,6 +201,7 @@ a {
     justify-content: center;
     border-radius: 10px;
     transform: translateX(100%);
+    transition: transform 200ms ease-in;
     background-color: var(--light-violet);
   }
 
