--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Global Styles */
+/* ========================== Global Styles ========================== */
 * {
   margin: 0;
   padding: 0;
@@ -24,7 +24,7 @@
 
   --violet-tint: rgba(23, 5, 40, 0.5);
   --blue-tint: rgba(100, 218, 255, 0.122);
-  --blue-tint-alt: rgba(100, 218, 255, 0.75);
+  --blue-tint-alt: rgba(100, 218, 255, 0.55);
 
   --font-text: 'Work Sans', 'sans-serif';
   --font-head: 'Poppins', 'sans-serif';
@@ -34,23 +34,48 @@
   --fs-sm: 14px;
   --fs-md: 16px;
   --fs-lg: 18px;
-  --fs-head: 40px;
-  --fs-title: 24px;
+  --fs-xl: 20px;
+
+  --fs-head: 3.5rem;
+  --fs-title: 3rem;
 
   --border-radius: 4px;
 
+  --social-icons-size: 1.5rem;
+  --social-bar-height: 6.25rem;
+
+  --moon-size: 320px;
+  --satellite-size: 60px;
+
+  /* Transition */
+  --quick: 200ms;
+  --normal: 250ms;
+  --slow: 300ms;
+
+  /* Bezier Curves for transition-timing-function. Thanks to: https://matthewlein.com/tools/ceaser */
+  --easeInCubic: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+  --easeOutSine: cubic-bezier(0.390, 0.575, 0.565, 1.000);
+  --easeOutCubic: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  --easeInOutSine: cubic-bezier(0.445, 0.050, 0.550, 0.950);
   /* 
     --custom-clr: NULL; Logical property
   */
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    --moon-size: 260px;
+  }
 }
 
 body {
   color: var(--custom-color, var(--slate));
   font-family: var(--custom-font, var(--font-text));
   background-color: var(--violet);
+  line-height: 1.4;
 }
 
-/* Typography */
+/* ========================== Typography ========================== */
 svg {
   /* width: 100%;
   height: 100%; */
@@ -62,6 +87,7 @@ svg {
 h1,
 h2,
 h3 {
+  line-height: 1;
   font-family: var(--font-head);
 }
 
@@ -70,10 +96,11 @@ li,
 a {
   display: inline-block;
   letter-spacing: 0.25px;
+  color: var(--slate);
   font-family: var(--font-text);
 }
 
-/* Utility Classes */
+/* ========================== Utility Classes ========================== */
 .flex {
   display: flex;
   align-items: var(--align-flex, center);
@@ -81,9 +108,11 @@ a {
 }
 
 .container {
-  width: 100%;
+  width: calc(100vw - 3.5rem);
   margin: 0 auto;
-  border: 2px solid red;
+  min-height: 100vh;
+  max-width: 1250px;
+  /* border: 2px solid red; */
 }
 
 .btn {
@@ -101,9 +130,8 @@ a {
   animation: none !important;
   transition: none !important;
 }
-/* ===========
-      Navbar
-   =========== */
+
+/* ========================== Navigation Bar ========================== */
 .nav-header {
   display: grid;
   align-items: center;
@@ -155,7 +183,7 @@ a {
   position: relative;
   font-size: var(--fs-sm);
   color: var(--lightest-slate);
-  transition: color 300ms ease-in;
+  transition: color var(--normal) var(--easeInCubic);
 }
 
 .nav-list-item::after {
@@ -171,7 +199,7 @@ a {
   transform: scaleX(0);
   transform-origin: right;
   padding-block: 0.75px;
-  transition: transform 300ms ease-out;
+  transition: transform var(--normal) var(--easeOutSine);
 }
 
 .nav-list-item:hover {
@@ -201,13 +229,12 @@ a {
     justify-content: center;
     border-radius: 10px;
     transform: translateX(100%);
-    transition: transform 200ms ease-in;
+    transition: transform var(--quick) var(--easeOutCubic);
     background-color: var(--light-violet);
   }
 
   .nav-box[toggle="true"] {
     transform: translateX(0%);
-    transition: transform 200ms ease-out;
   }
 
   .nav-box,
@@ -243,8 +270,7 @@ a {
     border-radius: var(--border-radius);
     transition: width 300ms ease-out;
     transform: none;
-    padding: 0;
-    /* padding-block: 0.05rem; */
+    padding: 0.05rem 0;
   }
 
   .nav-list-item::before {
@@ -273,60 +299,197 @@ a {
     cursor: pointer;
   }
 
+  .social {
+    display: none;
+  }
   /* Blur all the sections with an id of content or make sure every content is within a div tag with a class or id of content or anything */
   /* section {
     filter: blur(5px) brightness(0.8);
   } */
 }
 
-/* ===========
-      Front
-   =========== */
+/* ========================== Main ========================== */
+main {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1600px;
+  min-height: 100vh;
+}
+
 section {
-  opacity: 1;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* =================== Social Bar =================== */
+.social {
+  z-index: 9;
+  position: fixed;
+  margin-inline: 3rem;
+  bottom: 0; right: 0; left: 0;
+  justify-content: space-between;
+  align-items: flex-end;
+  pointer-events: none;
+}
+
+.social-list,
+.mail-box {
+  writing-mode: vertical-rl; /* Behaves like: flex-direction: column */
+  --gap: 0.75rem;
+  pointer-events: auto;
+}
+
+.social-list::after,
+.mail-box::after {
+  content: '';
+  width: 1.5px;
+  height: var(--social-bar-height);
+  border-radius: 200px;
+  background-color: var(--slate);
+}
+
+.social-items,
+.mail-box > a {
+  padding: 0.5rem 0.75rem;
+  transition: all var(--normal) var(--easeInOutSine);
+}
+
+.social-items > .icons,
+.mail-box > a {
+  color: var(--light-slate);
+}
+
+.social-items > .icons {
+  width: var(--social-icons-size);
+  height: var(--social-icons-size);
+}
+
+.social li:nth-child(2) .icons {
+  margin-top: -3px;
+}
+
+.mail-box > a {
+  margin-left: 1px;
+  font-size: var(--fs-sm);
+  letter-spacing: 0.125rem;
+}
+
+.social-items:hover > .icons path,
+.mail-box > a:hover {
+  color: var(--blue);
+}
+
+.social-items:hover,
+.mail-box > a:hover {
+  transform: translateY(-5px);
+}
+
+/* =================== Home =================== */
+.home {
+  --gap: 0;
+  align-items: center;
   justify-content: space-evenly;
-  overflow: hidden;
 }
 
-.hero {
-  max-width: 800px;
+.home-text {
+  --gap: 0;
   flex-direction: column;
-  justify-content: center;
   --align-flex: flex-start;
-  min-height: 100vh;
+  padding-top: 40%;
 }
 
-.heroo {
-  max-width: 800px;
-  flex-direction: column;
-  min-height: 100vh;
+.ht-intro {
+  font-weight: 100;
+  color: var(--blue);
+  font-size: clamp(var(--fs-md), 1vw, var(--fs-xl));
+  font-family: var(--font-text);
+  margin-bottom: 1rem;
+  /* margin-left: 0.185rem; */
 }
 
-.mini-sys {
-  fill: none;
-  justify-content: center;
-  --align-flex: center;
-  width: 300px;
-  height: 300px;
-  margin: auto auto;
+.ht-name {
+  font-weight: 600;
+  font-size: var(--fs-head);
+  color: var(--lightest-slate);
+  margin-bottom: -0.4rem;
 }
 
-#Ring {
-  stroke: var(--slate);
-  stroke-width: 3;
-  transition: all 250ms ease-in-out;
+.ht-desc {
+  /* font-size: clamp(var(--fs-md), 100vw, var(--fs-lg)); */
+  margin: 1rem 0 1.5rem 0;
+  font-size: var(--fs-md);
+  max-width: 584px;
 }
 
-#Ring:hover {
-  stroke: var(--blue);
-  stroke-width: 3;
-  transition: all 200ms ease-in-out;
+.ht-btn {
+  position: relative;
+  --fs-custom: var(--fs-md);
 }
 
-/* .moon {
-  display: inline-block;
-  float: left;
-  width: 200px;
-  height: 200px;
-  margin: inherit;
-} */
+.ht-btn,
+.btn-arrow {
+  transition: all var(--normal) var(--easeOutSine);
+}
+
+.btn-arrow {
+  z-index: -1;
+  opacity: 0;
+  width: 40px;
+  height: 16px;
+  position: absolute;
+  left: 100%; top: 35%; bottom: 0;
+  transform: translateX(-20px);
+  pointer-events: none;
+}
+
+.ht-btn:hover {
+  background-color: var(--blue-tint);
+}
+
+.ht-btn:hover .btn-arrow {
+  opacity: 1;
+  transform: translateX(10px);
+}
+
+.mini-system {
+  position: relative;
+}
+
+.mini-system .moon {
+  color: var(--slate);
+  width: var(--moon-size);
+  height: var(--moon-size);
+}
+
+.mini-system .satellite {
+  width: var(--satellite-size);
+  height: var(--satellite-size);
+  transform: translateY(20px) rotate(6deg);
+}
+
+.satellite-box {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  transform-origin: center;
+  animation: revolve 6s linear infinite;
+}
+
+.satellite-box::before {
+  content: '';
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  width: var(--moon-size);
+  height: var(--moon-size);
+  border: 1px solid var(--blue-tint-alt);
+  border-radius: var(--moon-size);
+}
+
+@keyframes revolve {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
