--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,6 @@ html {
     --mercury-orbit-size: 100px;
     --venus-orbit-size: 150px;
     --earth-orbit-size: 200px;
-
-    --heading-line: 100px;
   }
 }
 
@@ -210,7 +208,7 @@ a {
   position: absolute;
   width: var(--heading-line);
   bottom: 15%;
-  /* opacity: 0.4; */
+  opacity: 0.4;
 }
 
 /* ========================== Navigation Bar ========================== */
@@ -414,7 +412,7 @@ section {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 /* =================== Social Bar =================== */
@@ -767,22 +765,22 @@ section {
 /* =================== Skills =================== */
 .skills {
   --gap: 5rem;
-  /* flex-direction: row; */
 }
 
 .skills-box {
   display: grid;
-  gap: 0.75rem;
+  gap: 1rem;
   row-gap: 1.25rem;
   grid-template-columns: repeat(6, 1fr);
+  place-items: center;
 }
 
 .card {
   --gap: 1rem;
   flex-direction: column;
   justify-content: center;
-  width: clamp(60px, 12vw, 125px);
-  height: clamp(60px, 12vw, 125px);
+  width: clamp(70px, 12vw, 125px);
+  height: clamp(70px, 12vw, 125px);
   border-radius: var(--card-radius);
   cursor: pointer; /* Gives you the hand cursor pointer */
   user-select: none; /* Makes the card & all of its children unselectable by the user */
@@ -795,8 +793,8 @@ section {
 }
 
 .card svg {
-  width: 40px;
-  height: 40px;
+  width: clamp(30px, 4vw, 40px);
+  height: clamp(30px, 4vw, 40px);
   color: var(--slate);
   transform: translateY(50%);
   opacity: 0.5;
@@ -829,4 +827,16 @@ section {
 .card:hover svg path,
 .card:hover p {
   color: var(--blue);
+}
+
+@media screen and (max-width: 900px) {
+  .skills-box {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .skills-box {
+    grid-template-columns: 1fr;
+  }
 }
