--- a/css/styles.css
+++ b/css/styles.css
@@ -231,13 +231,23 @@ a {
   overflow: hidden;
 }
 
+.nav-header::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+}
+
 @supports (backdrop-filter: blur(1px)) {
-  .nav-header {
+  .nav-header::before {
     backdrop-filter: blur(6px);
   }
 }
 
 .navbar {
+  z-index: 10;
   position: relative;
   justify-content: space-between;
   margin: 0 clamp(25px, 7.55vw, 50px);
