--- a/css/styles.css
+++ b/css/styles.css
@@ -227,22 +227,8 @@ a {
   z-index: 10;
   transition: transform var(--quick) var(--easeOutSine) 0.1s,
               height var(--quick) var(--easeOutSine);
+  backdrop-filter: blur(6px);
   overflow: hidden;
-}
-
-.nav-header::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-}
-
-@supports (backdrop-filter: blur(1px)) {
-  .nav-header::before {
-    backdrop-filter: blur(6px);
-  }
 }
 
 .navbar {
@@ -320,6 +306,10 @@ a {
 }
 
 @media screen and (max-width: 768px) {
+  .nav-header {
+    backdrop-filter: none;
+  }
+
   .nav-box {
     --gap: 2.5rem;
     position: fixed;
@@ -337,7 +327,7 @@ a {
   }
 
   .nav-box[toggle="true"] {
-    transform: translateX(0%);
+    transform: translateX(0);
   }
 
   .nav-box,
