Fix: Fixed slight shaking effect on skill cards
Slight oversight by me. If I am translating the card's pos by 5px, I should ensure to set it back to 0 when the user isn't hovering
Surprisingly, this was the only issue which caused that slight shaky effect visible on svgs after they were done transitioning

--- a/css/styles.css
+++ b/css/styles.css
@@ -808,6 +808,7 @@ section {
   width: var(--sk-card-size);
   height: var(--sk-card-size);
   border-radius: var(--card-radius);
+  transform: translateY(0);
   transition: transform var(--normal) var(--easeOutSine),
               box-shadow var(--normal) var(--easeOutSine);
   user-select: none; /* Makes the card & all of its children unselectable by the user */
