Feat: Customized selection color
Now the text will turn blue when the user selects it & a different color of highlight will be shown

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@
   box-sizing: border-box;
 }
 
+::selection {
+  background-color: var(--lightest-violet);
+  color: var(--blue);
+}
+
 html {
   scrollbar-width: thin;
   scroll-behavior: smooth;
